objects/Test345__c.object
<CustomObject>
    <fields>
        <fullName>Test123__c</fullName>
        <label>Test123</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test123_del__c</fullName>
        <description>add des ss ADD changed</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Test123</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Encryption__c</fullName>
        <label>Test_Encryption</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>